--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.0.2
+Date: 01.18.2025
+  Bugfixes:
+    - changed load order for armored biter addendum
+---------------------------------------------------------------------------------------------------
 Version: 0.0.1
-Date: 01.22.2025
+Date: 01.17.2025
   Changes:
     - initial release
   Bugfixes:
