--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,19 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.0.4
+Date: 01.19.2025
+  Changes:
+    - antimatter statistic increased by 10x to .001
+    - adding a (small) fuel value to light oil and heavy oil
+    - adding mirandite sludge to asteroid productivity
+  Bugfixes:
+    - research prerequisite changes that make sense for certain recipes
+    - mirandite changed to use dramatically less material
+    - the advanced thruster fuel and advanced thruster oxidizer recipes should now be affected by the repeatable research
+    - mirandite chunks should behave like asteroid chunks now
+    - more localization strings
+    - several planetary properties were adjusted. Notably, Neumann should be functionally similar to an space platform
+    - better support for Enemy Race Manager mod
+---------------------------------------------------------------------------------------------------
 Version: 0.0.3
 Date: 01.18.2025
   Changes:
