--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,7 @@ Date: 01.19.2025
     - antimatter statistic increased by 10x to .001
     - adding a (small) fuel value to light oil and heavy oil
     - adding mirandite sludge to asteroid productivity
+    - added recipe for wood to carbon in pyrolysis tech
   Bugfixes:
     - research prerequisite changes that make sense for certain recipes
     - mirandite changed to use dramatically less material
