--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,15 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.0.5
+Date: 01.20.2025
+  Changes:
+    - added support for nuclear science mod
+    - quantum science pack no longer spoils. It was a nice idea, but unoptimizable with how spoilage works
+
+  Bugfixes:
+    - conduit can be built on Neumann again
+    - added liquid rocket fuel to rocket fuel productivity research
+    - added recipe to actually use uranium-233
+---------------------------------------------------------------------------------------------------
 Version: 0.0.4
 Date: 01.19.2025
   Changes:
