--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.0.6
+Date: 01.20.2025
+  Bugfixes:
+    - maraxsis routes fixed
+---------------------------------------------------------------------------------------------------
 Version: 0.0.5
 Date: 01.20.2025
   Changes:
