--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.0.7
+Date: 01.20.2025
+  Bugfixes:
+    - disabled quantum science salvage by default
+---------------------------------------------------------------------------------------------------
 Version: 0.0.6
 Date: 01.20.2025
   Bugfixes:
