--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ Version: 0.0.7
 Date: 01.20.2025
   Bugfixes:
     - disabled quantum science salvage by default
+    - renamed some prototypes and recipes to avoid common conflicts with other mods
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.6
 Date: 01.20.2025
