--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,13 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.0
+Date: 02.15.2025
+  Changes:
+    - added new planet Volantus
+    - moved planets to a dedicated star-system
+    - added some enhanced assets for visible planets
+  Bugfixes:
+    - several machines should now correctly accept and apply module effects
+---------------------------------------------------------------------------------------------------
 Version: 0.0.8
 Date: 01.22.2025
   Changes:
