--- a/changelog.txt
+++ b/changelog.txt
@@ -4,9 +4,10 @@ Date: 02.15.2025
   Changes:
     - added new planet Volantus
     - moved planets to a dedicated star-system
-    - added some enhanced assets for visible planets
+    - added some enhanced assets for visible planets mod
   Bugfixes:
     - several machines should now correctly accept and apply module effects
+    - corrected 'dark matter crystal' recipe, it now takes 1 additional diamond
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.8
 Date: 01.22.2025
