--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.4
+Date: 02.20.2025
+  Changes:
+    - new thumbnail icon
+  Bugfixes:
+    - ammoniac cultivation is now net-positive
+---------------------------------------------------------------------------------------------------
 Version: 0.1.3
 Date: 02.20.2025
   Bugfixes:
