--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.5
+Date: 02.20.2025
+  Changes:
+    - added zh-CN localization
+  Bugfixes:
+    - crusher should now correctly integrate with other mods using PlanetsLib
+---------------------------------------------------------------------------------------------------
 Version: 0.1.4
 Date: 02.20.2025
   Changes:
