--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.6
+Date: 02.20.2025
+  Changes:
+    - added fr-french localization
+---------------------------------------------------------------------------------------------------
 Version: 0.1.5
 Date: 02.20.2025
   Changes:
